--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h3>パスワードを入力してください</h3>
     <input type="password" id="password" placeholder="Password">
     <button onclick="checkPassword()">ENTER</button>
-    <a href="/#contact">パスワードのお問い合わせはこちらから</a>
+    <a href="https://honikaze.com/#contact">パスワードのお問い合わせはこちらから</a>
     <p id="errorMessage" class="error">パスワードが違います</p>
   </div>
 
