--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <input type="password" id="password" placeholder="Password">
     <button onclick="checkPassword()">ENTER</button>
     <p id="errorMessage" class="error">パスワードが違います</p>
+    <a href="https://honikaze.com/#contact">パスワードのお問い合わせはこちら</a>
   </div>
 
   <script>
