--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <p id="errorMessage" class="error">パスワードが違います</p>
     
     <div>
-      <a href="https://honikaze.com/#contact" target="_top" class="contact-link">パスワードのお問い合わせはこちら</a>
+      <a href="https://honikaze.com/">パスワードのお問い合わせはこちら</a>
     </div>
   </div>
 
