--- a/en.html
+++ b/en.html
@@ -84,7 +84,7 @@
     <button onclick="checkPassword()">ENTER</button>
     <p id="errorMessage" class="error">The password is incorrect.</p>
     <div>
-      <a href="https://honikaze.com/#contact" target="_top" class="contact-link">For password inquiries, please contact us here.</a>
+      <a href="https://honikaze.com/en/#contact" target="_top" class="contact-link">For password inquiries, please contact us here.</a>
     </div>
   </div>
 
